Change logo and copy right
Change logo and copy right

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 			<!-- MAIN NAVBAR -->
 				<nav class="navbar navbar-expand-lg  navbar-dark">
 			        <div class="container">
-				        <a class="navbar-brand logo-sticky" href="index.html">X-Fusion</a>
+				        <a class="navbar-brand logo-sticky" href="index.html">website</a>
 				        <button class="navbar-toggler collapsed" data-toggle="collapse" data-target="#navbarNav" aria-expanded="false"><span class="fa fa-bars"></span></button>
 			            <div class="collapse navbar-collapse" id="navbarNav">
 			              	<ul class="navbar-nav ml-auto" id="nav">
@@ -906,7 +906,7 @@
 			<div class="row"> 
 				<div class="col-md-6 col-12">
 					<div class="bottom_footer_info">
-						<p>Copyright &copy; 2018 X-Fusion, All Rights Reserved</p>
+						<p></p>
 					</div>
 				</div>
 				<div class="col-md-6 col-12">
