--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="CodeGlamour">
  
     <!-- Site Title -->
-    <title>X-Fusion - Creative Agency HTML5 Template</title>
+    <title>website HTML5 Template</title>
     
     <!-- Favicon -->
     <link rel="shortcut icon" href="assets/images/favicons/fabicon.png">
